# EyeD_RPI

./: .gitignore  CMakeLists.txt  build.sh  createXcodeProj.sh  rebuild.sh
src/: ImageUtils.h  ImageUtils_0.7.cpp  UIComponents.cpp  UIComponents.h  detectObject.cpp  detectObject.h  main.cpp  preprocessFace.cpp  preprocessFace.h  recognition.cpp  recognition.h
